--- a/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
+++ b/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
@@ -10,8 +10,10 @@
    <children>
       <GridPane prefHeight="525.0" prefWidth="700.0">
         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,29 +31,50 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea fx:id="console" prefHeight="173.0" prefWidth="725.0" wrapText="true" GridPane.columnSpan="8" GridPane.rowIndex="8" GridPane.rowSpan="4">
+            <TextArea fx:id="console" prefHeight="181.0" prefWidth="931.0" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="12" GridPane.rowSpan="4">
                <font>
                   <Font size="14.0" />
                </font>
             </TextArea>
-            <Label contentDisplay="RIGHT" text="Team Number" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-            <Label text="Round Number" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
-            <TextField fx:id="numberTeam" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextField fx:id="numberRound" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label contentDisplay="RIGHT" text="Team Number" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <Label text="Round Number" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <TextField fx:id="numberTeam" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <TextField fx:id="numberRound" GridPane.columnIndex="8" GridPane.rowIndex="1" />
             <TextField fx:id="textCompetition" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Label text="Competition" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+            <RadioButton fx:id="leftPos" mnemonicParsing="false" text="Left" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <RadioButton fx:id="rightPos" mnemonicParsing="false" text="Right" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <RadioButton fx:id="midPos" mnemonicParsing="false" text="Middle" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <RadioButton fx:id="goalPos" mnemonicParsing="false" text="Goalie" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="130.0" text="Starting Position" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <Label text="Hot Goal Detection" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <RadioButton fx:id="yesHot" mnemonicParsing="false" text="Yes" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <RadioButton fx:id="noHot" mnemonicParsing="false" text="No" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <RadioButton fx:id="idkHot" mnemonicParsing="false" text="Maybe" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+            <Label text="High/Low Goal Auto" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+            <RadioButton fx:id="highGoal" mnemonicParsing="false" text="High" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <RadioButton fx:id="lowGoal" mnemonicParsing="false" text="Low" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <RadioButton fx:id="noGoal" mnemonicParsing="false" text="None" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+            <Label text="Comments" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextArea fx:id="textComments" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="6" GridPane.rowIndex="7" GridPane.rowSpan="2" />
          </children>
       </GridPane>
       <MenuBar prefHeight="25.0" prefWidth="700.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem fx:id="fileOpen" mnemonicParsing="false" onAction="#openFile" text="Open" />
+                  <MenuItem fx:id="fileSave" mnemonicParsing="false" onAction="#saveFile" text="Save" />
+              <MenuItem fx:id="fileNew" mnemonicParsing="false" onAction="#resetFields" text="New" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
@@ -61,12 +84,12 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Server">
               <items>
-                <MenuItem fx:id="connect" mnemonicParsing="false" onAction="#handle" text="Connect" />
+                <MenuItem fx:id="connect" mnemonicParsing="false" onAction="#handle" text="Send Data" />
               </items>
             </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem fx:id="helpAbout" mnemonicParsing="false" onAction="#showAbout" text="About" />
             </items>
           </Menu>
         </menus>
