--- a/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
+++ b/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="525.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.petoskeypaladins.scouting.client.Controller">
    <children>
-      <GridPane prefHeight="525.0" prefWidth="700.0">
+      <GridPane prefHeight="399.0" prefWidth="700.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -23,7 +23,7 @@
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -40,11 +40,6 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea fx:id="console" prefHeight="181.0" prefWidth="931.0" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="12" GridPane.rowSpan="4">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextArea>
             <Label contentDisplay="RIGHT" text="Team Number" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
             <Label text="Round Number" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
             <TextField fx:id="numberTeam" GridPane.columnIndex="5" GridPane.rowIndex="1" />
@@ -64,9 +59,9 @@
             <RadioButton fx:id="highGoal" mnemonicParsing="false" text="High" GridPane.columnIndex="3" GridPane.rowIndex="4" />
             <RadioButton fx:id="lowGoal" mnemonicParsing="false" text="Low" GridPane.columnIndex="4" GridPane.rowIndex="4" />
             <RadioButton fx:id="noGoal" mnemonicParsing="false" text="None" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-            <Label text="Comments" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextArea fx:id="textComments" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="6" GridPane.rowIndex="7" GridPane.rowSpan="2" />
-            <TextField fx:id="textIP" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="10" />
+            <Label text="Comments" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+            <TextArea fx:id="textComments" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="6" GridPane.rowIndex="12" GridPane.rowSpan="2" />
+            <TextField fx:id="textIP" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="15" />
          </children>
       </GridPane>
       <MenuBar prefHeight="25.0" prefWidth="700.0">
@@ -95,5 +90,10 @@
           </Menu>
         </menus>
       </MenuBar>
+      <AnchorPane layoutY="400.0" prefHeight="125.0" prefWidth="700.0">
+         <children>
+            <TextArea fx:id="console" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="700.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
