--- a/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
+++ b/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="525.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.petoskeypaladins.scouting.client.Controller">
+<AnchorPane prefHeight="650.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.petoskeypaladins.scouting.client.Controller">
    <children>
-      <GridPane prefHeight="525.0" prefWidth="700.0">
+      <GridPane prefHeight="500.0" prefWidth="800.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -23,6 +23,10 @@
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -38,38 +42,106 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea fx:id="console" prefHeight="181.0" prefWidth="931.0" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="12" GridPane.rowSpan="4">
+            <Label contentDisplay="RIGHT" text="Team Number" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Label>
+            <Label text="Round Number" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="numberTeam" GridPane.columnIndex="5" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </TextField>
+            <TextField fx:id="numberRound" GridPane.columnIndex="8" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </TextField>
+            <TextField fx:id="textCompetition" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </TextField>
+            <Label text="Competition" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Label>
+            <RadioButton fx:id="leftPos" mnemonicParsing="false" text="Left" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <RadioButton fx:id="rightPos" mnemonicParsing="false" text="Right" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <RadioButton fx:id="midPos" mnemonicParsing="false" text="Middle" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+            <RadioButton fx:id="goalPos" mnemonicParsing="false" text="Goalie" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+            <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="130.0" text="Starting Position" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+            <Label text="Hot Goal Detection" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="7" />
+            <RadioButton fx:id="yesHot" mnemonicParsing="false" text="Yes" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+            <RadioButton fx:id="noHot" mnemonicParsing="false" text="No" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+            <RadioButton fx:id="idkHot" mnemonicParsing="false" text="Maybe" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+            <Label text="High/Low Goal Auto" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="8" />
+            <RadioButton fx:id="highGoal" mnemonicParsing="false" text="High" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+            <RadioButton fx:id="lowGoal" mnemonicParsing="false" text="Low" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+            <RadioButton fx:id="noGoal" mnemonicParsing="false" text="None" GridPane.columnIndex="5" GridPane.rowIndex="8" />
+            <TextField fx:id="textIP" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="23">
+               <GridPane.margin>
+                  <Insets top="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <Label text="Comments" GridPane.columnIndex="1" GridPane.rowIndex="18" />
+            <TextArea fx:id="textComments" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="6" GridPane.rowIndex="19" GridPane.rowSpan="3" />
+            <Label text="IP Address" GridPane.columnIndex="1" GridPane.rowIndex="22" />
+            <ComboBox fx:id="autoBallOne" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+            <Label prefHeight="17.0" prefWidth="60.0" text="First Ball" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label prefHeight="17.0" prefWidth="160.0" text="Autonomous" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" GridPane.rowSpan="2">
                <font>
-                  <Font size="14.0" />
+                  <Font size="22.0" />
                </font>
-            </TextArea>
-            <Label contentDisplay="RIGHT" text="Team Number" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-            <Label text="Round Number" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-            <TextField fx:id="numberTeam" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-            <TextField fx:id="numberRound" GridPane.columnIndex="8" GridPane.rowIndex="1" />
-            <TextField fx:id="textCompetition" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label text="Competition" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
-            <RadioButton fx:id="leftPos" mnemonicParsing="false" text="Left" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <RadioButton fx:id="rightPos" mnemonicParsing="false" text="Right" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-            <RadioButton fx:id="midPos" mnemonicParsing="false" text="Middle" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-            <RadioButton fx:id="goalPos" mnemonicParsing="false" text="Goalie" GridPane.columnIndex="6" GridPane.rowIndex="2" />
-            <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="130.0" text="Starting Position" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-            <Label text="Hot Goal Detection" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-            <RadioButton fx:id="yesHot" mnemonicParsing="false" text="Yes" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <RadioButton fx:id="noHot" mnemonicParsing="false" text="No" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-            <RadioButton fx:id="idkHot" mnemonicParsing="false" text="Maybe" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-            <Label text="High/Low Goal Auto" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-            <RadioButton fx:id="highGoal" mnemonicParsing="false" text="High" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <RadioButton fx:id="lowGoal" mnemonicParsing="false" text="Low" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-            <RadioButton fx:id="noGoal" mnemonicParsing="false" text="None" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-            <Label text="Comments" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextArea fx:id="textComments" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="6" GridPane.rowIndex="7" GridPane.rowSpan="2" />
-            <TextField fx:id="textIP" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="10" />
+            </Label>
+            <Label text="Second Ball" GridPane.columnIndex="4" GridPane.rowIndex="9" />
+            <ComboBox fx:id="autoBallTwo" prefWidth="150.0" GridPane.columnIndex="5" GridPane.rowIndex="9" />
+            <ComboBox fx:id="autoBallThree" prefWidth="150.0" GridPane.columnIndex="8" GridPane.rowIndex="9" />
+            <Label text="Third Ball" GridPane.columnIndex="7" GridPane.rowIndex="9" />
+            <Label prefHeight="17.0" prefWidth="160.0" text="Teleoperated" GridPane.columnIndex="1" GridPane.columnSpan="9" GridPane.rowIndex="10" GridPane.rowSpan="2">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+            <Label prefHeight="17.0" prefWidth="160.0" text="Prerequisites" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+            <Label text="Strategy" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+            <TextField fx:id="teleStrat" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="12" />
+            <Label text="Ability to Pick Up the Ball" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="14" />
+            <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="160.0" text="Number of Ball Cycles" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="14" />
+            <Label text="High Goal Shots Missed" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="15" />
+            <Label text="High Goal Shots Scored" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="15" />
+            <Label text="Low Goal Shots Missed" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="16" />
+            <Label text="Low Goal Shots Scored" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="16" />
+            <Label text="Truss Shots Failed" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="17" />
+            <Label text="Truss Shots Completed" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="17" />
+            <TextField fx:id="teleBallPickUp" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="3" GridPane.rowIndex="14" />
+            <TextField fx:id="teleHighMiss" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="3" GridPane.rowIndex="15" />
+            <TextField fx:id="teleLowMiss" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="3" GridPane.rowIndex="16" />
+            <TextField fx:id="teleTrussMiss" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="3" GridPane.rowIndex="17" />
+            <TextField fx:id="teleBallCycles" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="7" GridPane.rowIndex="14" />
+            <TextField fx:id="teleHighScore" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="7" GridPane.rowIndex="15" />
+            <TextField fx:id="teleTrussScore" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="7" GridPane.rowIndex="17" />
+            <TextField fx:id="teleLowScore" scaleX="0.7" scaleY="0.8" GridPane.columnIndex="7" GridPane.rowIndex="16" />
+            <Button mnemonicParsing="false" onAction="#nextRound" text="Next Round" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
          </children>
       </GridPane>
-      <MenuBar prefHeight="25.0" prefWidth="700.0">
+      <MenuBar maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="800.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -86,6 +158,7 @@
             <Menu mnemonicParsing="false" text="Server">
               <items>
                 <MenuItem fx:id="connect" mnemonicParsing="false" onAction="#handle" text="Send Data" />
+                  <MenuItem mnemonicParsing="false" onAction="#testConnection" text="Test Connection" />
               </items>
             </Menu>
           <Menu mnemonicParsing="false" text="Help">
@@ -95,5 +168,10 @@
           </Menu>
         </menus>
       </MenuBar>
+      <AnchorPane layoutY="511.0" prefHeight="135.0" prefWidth="800.0">
+         <children>
+            <TextArea fx:id="console" layoutY="-5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="136.0" prefWidth="800.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
