HTML Document implemented with sort and list

--- a/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
+++ b/Robotics Scouting Client/src/org/petoskeypaladins/scouting/client/xml/Application.fxml
@@ -141,6 +141,11 @@
                 <MenuItem fx:id="connect" mnemonicParsing="false" onAction="#handle" text="Send Data" />
               </items>
             </Menu>
+            <Menu mnemonicParsing="false" text="Teams">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Import List" />
+              </items>
+            </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem fx:id="helpAbout" mnemonicParsing="false" onAction="#showAbout" text="About" />
